WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
229316
[iOS] Fix and reenable several layout tests to account for the changes in
rdar://80384564
https://bugs.webkit.org/show_bug.cgi?id=229316
Summary
[iOS] Fix and reenable several layout tests to account for the changes in rda...
Wenson Hsieh
Reported
2021-08-19 17:43:31 PDT
rdar://80384564
makes UIKit's text tap gesture recognizer no longer unconditionally clear the text selection. This is going to bring back the bug that was fixed by
https://trac.webkit.org/r264481
(and cause the layout test `editing/selection/iOS/hide-selection-after-tap-on-prevent-default-element.html` to fail). As such, we need to teach WebKit to clear in some scenarios where the text tap gesture would've previously kicked in (and caused us to clear the selection).
Attachments
Patch
(11.75 KB, patch)
2021-08-20 09:50 PDT
,
Wenson Hsieh
no flags
Details
Formatted Diff
Diff
Tweak ChangeLog
(11.71 KB, patch)
2021-08-20 09:53 PDT
,
Wenson Hsieh
no flags
Details
Formatted Diff
Diff
Rebase on trunk
(11.24 KB, patch)
2021-08-22 12:03 PDT
,
Wenson Hsieh
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2021-08-20 09:50:33 PDT
Comment hidden (obsolete)
Created
attachment 436002
[details]
Patch
Wenson Hsieh
Comment 2
2021-08-20 09:53:24 PDT
Comment hidden (obsolete)
Created
attachment 436003
[details]
Tweak ChangeLog
Wenson Hsieh
Comment 3
2021-08-22 12:03:39 PDT
Created
attachment 436121
[details]
Rebase on trunk
EWS
Comment 4
2021-08-22 14:26:51 PDT
Committed
r281420
(
240810@main
): <
https://commits.webkit.org/240810@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 436121
[details]
.
Radar WebKit Bug Importer
Comment 5
2021-08-22 14:27:17 PDT
<
rdar://problem/82222205
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug